# Song_Recognition

./: CMakeLists.txt  README.md  main.c
code_files/: CMakeLists.txt  func.c  func.h  main.c  main.h
code_files/.cache/clangd/index/: func.c.1D78C9981E2CE51A.idx  func.h.0EB0CAEFCBA0FF8D.idx  main.c.942705780B69577F.idx  main.h.C1656A17058C9238.idx
include/: func.h
src/: func.c
